--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 
     <header>
       <img src="img/fun-bus.jpg" alt="mini Fun Bus">
-      <h2>Welcome To Fun Bus!</h2>
-      <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expeditino theme travelblogger. Adventure fun treveler pretty design website expedition.</p>
+      <div class="introP">
+        <h2>Welcome To Fun Bus!</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expeditino theme travelblogger. Adventure fun treveler pretty design website expedition.</p>
+      </div>
+
     </header>
 
     <section class="content-section">
